# packages/api-types/src/generated/openapi.json
@@ -132,10 +132,16 @@
                     "type": "string",
                     "minLength": 1,
                     "maxLength": 1024
+                  },
+                  "sizeBytes": {
+                    "type": "integer",
+                    "exclusiveMinimum": 0,
+                    "maximum": 10485760
                   }
                 },
                 "required": [
-                  "key"
+                  "key",
+                  "sizeBytes"
                 ],
                 "additionalProperties": false
               }
@@ -149,10 +155,16 @@
                     "type": "string",
                     "minLength": 1,
                     "maxLength": 1024
+                  },
+                  "sizeBytes": {
+                    "type": "integer",
+                    "exclusiveMinimum": 0,
+                    "maximum": 10485760
                   }
                 },
                 "required": [
-                  "key"
+                  "key",
+                  "sizeBytes"
                 ],
                 "additionalProperties": false
               }
@@ -166,10 +178,16 @@
                     "type": "string",
                     "minLength": 1,
                     "maxLength": 1024
+                  },
+                  "sizeBytes": {
+                    "type": "integer",
+                    "exclusiveMinimum": 0,
+                    "maximum": 10485760
                   }
                 },
                 "required": [
-                  "key"
+                  "key",
+                  "sizeBytes"
                 ],
                 "additionalProperties": false
               }
